--- a/smart_contracts/package.json
+++ b/smart_contracts/package.json
@@ -15,6 +15,10 @@
     "chai": "^4.3.6",
     "ethereum-waffle": "^3.4.4",
     "ethers": "^5.7.1",
-    "hardhat": "^2.11.2"
+    "hardhat": "^2.11.2",
+    "ts-node": "^10.9.1"
+  },
+  "dependencies": {
+    "@nomicfoundation/hardhat-toolbox": "^2.0.0"
   }
 }
