--- a/client/krypt/package.json
+++ b/client/krypt/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@tailwindcss/forms": "^0.5.3",
     "ethers": "^5.7.1",
+    "gh-pages": "^5.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0"
